clang/test/BSC/Negative/Trait/GenericTrait/typedef_trait/typedef_trait.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

typedef trait F<T> { // expected-error {{use of undeclared identifier 'T'}} expected-error {{explicit specialization of undeclared template trait 'F'}}
  T foo(This* this, int a);  // expected-error {{unknown type name 'T'}}
}G;